--- a/FirstApp/FirstApp/FirstApp.csproj
+++ b/FirstApp/FirstApp/FirstApp.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Cercle.cs" />
     <Compile Include="Coordonnee.cs" />
     <Compile Include="Forme.cs" />
+    <Compile Include="FormeAbscisseComparer.cs" />
     <Compile Include="IEstDans.cs" />
     <Compile Include="ISommets.cs" />
     <Compile Include="Program.cs" />
